--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <ul class="skill-list">
                     <li>Power BI</li>
                     <li>Tableau</li>
-                    <li>Looker Studio</li>
+                   <!-- <li>Looker Studio</li> -->
                     <li>Excel Dashboards</li>
                 </ul>
             </div>
@@ -225,7 +225,7 @@
 <footer>
     <div class="container">
         <!--💡UPDATE: Change the year and your name-->
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2026 Seena Sharma. All rights reserved.</p>
     </div>
 </footer>
 
