--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <img src="assets/images/profile-placeholder.jpg" alt="Your Name" class="profile-photo">
             <div class="about-text">
                 <!--💡UPDATE: Write your own 'About Me' text here-->
-                <p> I'm a data professional with expertise in transforming complex datasets into actionable insights. My work focuses on creating interactive visualizations and data-driven stories that help organizations make informed decisions.</p>
-                <p>With experience in Power BI, SQL, and data modeling, I specialize in developing comprehensive reports that reveal hidden patterns and trends in data. This portfolio showcases my projects across various sectors.</p>
+                <p>  I am passionate about turning raw data into meaningful insights that support better business decisions. I focus on creating intuitive visualizations and clear data stories through hands-on analytical projects.</p>
+                 <p>   As a fresher with practical experience in Power BI, SQL, Excel, Python, Statistics, and data modeling, I have worked on real-world datasets to clean, analyze, and visualize data, identify trends, and build interactive dashboards. This portfolio showcases my projects and highlights my analytical thinking, problem-solving skills, and business understanding.</p>
             </div>
         </div>
     </div>
