--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div class="container">
         <!--💡UPDATE: Change to your name and title-->
         <h1>Seena Sharma</h1>
-        <p>Data Analyst | Power BI Developer | Your Title Here</p>
+        <p>Aspiring Data Analyst | Data Analytics & Visualization | Power BI • SQL • Excel • Python • Statistics</p>
         <div class="social-links">
             <!--💡UPDATE: Add your social media links and CV file-->
-            <a href="www.linkedin.com/in/seena-sharma-03009223a" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/seena-sharma-03009223a" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Seena6" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
             <!-- <a href="[YOUR_YOUTUBE_URL]" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a> -->
             <a href="assets/Your_Name_CV.pdf" download title="Download CV"><i class="fas fa-file-arrow-down"></i></a>
@@ -61,8 +61,10 @@
             <img src="assets/images/profile-placeholder.jpg" alt="Your Name" class="profile-photo">
             <div class="about-text">
                 <!--💡UPDATE: Write your own 'About Me' text here-->
-                <p>  I am passionate about turning raw data into meaningful insights that support better business decisions. I focus on creating intuitive visualizations and clear data stories through hands-on analytical projects.</p>
-                 <p>   As a fresher with practical experience in Power BI, SQL, Excel, Python, Statistics, and data modeling, I have worked on real-world datasets to clean, analyze, and visualize data, identify trends, and build interactive dashboards. This portfolio showcases my projects and highlights my analytical thinking, problem-solving skills, and business understanding.</p>
+                <p>I am a data analyst fresher passionate about transforming raw data into meaningful insights that support better business decisions.
+                   I enjoy working with real-world datasets to uncover trends, patterns, and actionable insights through clean analysis and effective storytelling.</p>
+                <p>I have hands-on experience with Power BI, SQL, Excel, Python, and statistics through multiple end-to-end projects involving data cleaning, analysis,
+                    modeling, and interactive dashboard development. My work reflects strong analytical thinking, attention to detail, and a business-focused approach to problem solving.</p>
             </div>
         </div>
     </div>
