--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Seena Sharma | Data Analysis Portfolio</title>
       
     <!--💡UPDATE: Add your favicon here. You can generate one at realfavicongenerator.net-->
-    <link rel="icon" type="image/png" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/favicon-32x32.png">
     
     <!-- Google Fonts for Elegant Typography -->
