--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Seena Sharma | Data Analysis Portfolio</title>
       
     <!--💡UPDATE: Add your favicon here. You can generate one at realfavicongenerator.net-->
-    <link rel="icon" type="image/png" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="/favicon.ico.png">
+    <link rel="apple-touch-icon" href="/favicon.ico.png">
     
     <!-- Google Fonts for Elegant Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
             <a href="https://www.linkedin.com/in/seena-sharma-03009223a" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Seena6" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
             <!-- <a href="[YOUR_YOUTUBE_URL]" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a> -->
-            <a href="assets/Your_Name_CV.pdf" download title="Download CV"><i class="fas fa-file-arrow-down"></i></a>
+            <a href="assets/Seena Sharma.pdf" download title="Download CV"><i class="fas fa-file-arrow-down"></i></a>
         </div>
     </div>
 </header>
