--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <!--💡UPDATE: Change the image to your own profile photo in assets/images/-->
-            <img src="assets/images/profile.jpg" alt="Seena Sharma" class="profile-photo">
+            <img src="assets/images/Profile.png" alt="Seena Sharma" class="profile-photo">
             <div class="about-text">
                 <!--💡UPDATE: Write your own 'About Me' text here-->
                 <p>I am a data analyst fresher passionate about transforming raw data into meaningful insights that support better business decisions.
