--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>Aspiring Data Analyst | Data Analytics & Visualization | Power BI • SQL • Excel • Python • Statistics</p>
         <div class="social-links">
             <!--💡UPDATE: Add your social media links and CV file-->
-            <a href="https://www.linkedin.com/in/seena-sharma-03009223a" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="www.linkedin.com/in/seena-sharma-03009223a" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Seena6" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
             <!-- <a href="[YOUR_YOUTUBE_URL]" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a> -->
             <a href="assets/Seena Sharma.pdf" download title="Download CV"><i class="fas fa-file-arrow-down"></i></a>
